@@ -39,6 +39,7 @@
 #include "m68k.h"
 #include "engine.h"
 #include "dbg_all.h"
+#include "printl.h"
 
 /* 
    The TI92/89 should approximately execute NB_CYCLES_PER_LOOP_HW[12] in 
@@ -150,7 +151,7 @@ void engine_calibrate(void)
 	g_usleep(500 * 1000);
 
 	// begin calibration loop
-	fprintf(stdout, "Calibrating engine: ");
+	printl(0, "Calibrating engine: ");
 	
 	g_timer_start(tmr);
 	for(i = 0; i < NLOOPS; i++)
@@ -165,5 +166,5 @@ void engine_calibrate(void)
 	cal = (guint)(ms / NLOOPS);
 	
 	// and display
-	fprintf(stdout, "%i loops in %.1f ms => %i ms\n", i, ms, cal);
+	printl(0, "%i loops in %.1f ms => %i ms\n", i, ms, cal);
 }
