@@ -7,6 +7,7 @@ To do:
 
 - 27/04/2005, version 1.80u:
 	- [roms]  $1191: popup menu can be raised by clicking on the LCD (iPAQ)
+	- [roms]  $1192: fixed logging domain support (printl)
 
 - 20/04/2005, version 1.80t:
 	- [roms]  $1152: fixed RAM space on Titanium
